# mikmik19.github.com

./: .gitignore  404.html  Arcadetrail.html  Arcadetrail.md  CNAME  CV.md  Makefile  README.md  _config.yml  about.md  books.md  environment.yml  feed.xml  index.html  index.md  package-lock.json  package.json  previews.md  search.md
.ipynb_checkpoints/: ListsVectorsAndMatrices-checkpoint.ipynb  collaberativeFiltering-checkpoint.ipynb
CV/: index.html
_devlog/: apr-01-2020.md  feb-01-2020.md  jan-01-2020.md  jul-12-2020.md  jul-13-2020.md  jun-20-2020.md  jun-21-2020.md  jun-28-2020.md  jun-29-2020.md  mar-01-2020.md  may-03-2020.md
_devlogs/: jun-07-2020.md  jun-21-2020.md  jun-29-2020.md
_drafts/: 2016-01-01-d3test.md  2016-01-01-topological-data-analysis.md  2017-07-22-my-problem-with-the-roc-curve.md  2017-08-20-getting-data.md  2018-05-05-getting-into-chaos-theory.md  2018-05-06-coupled-oscillators.md  (+28 more)
etffinder/: index.md  pyproject.toml  style.css  table.js
etffinder/data/: ECAR.csv  GlobalXBattery.csv  ICLN.csv  NewEnergy.csv  RBOT.csv  TEET.csv  TGET.csv  TRET.csv  TSWE.csv  UCTESPO.csv
etffinder/data/raw/: EMT - WisdomTree UCITS ETFs.xlsx  GlobalXBattery.csv  ICLN_holdings.csv  RBOT_holdings.csv  TEET_asof_20210225.csv  TEET_asof_20210225.xls  TGET_asof_20210225.csv  TGET_asof_20210225.xls  TRET_asof_20210225.csv  TRET_asof_20210225.xls  TSWE_asof_20210225.csv  TSWE_asof_20210225.xls  UCTESPO_asof_20210223.csv  UCTESPO_asof_20210223.xls  global-x-robotics-artificial-intelligence-etf_full-holdings_20210226.csv
etffinder/scripts/: parse_data.py
(+305 files in other folders)
